// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H4 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 25.2,
      "lineHeight": 31.28,
      "paddingBottom": 3.71,
      "paddingTop": 5.04,
    }
  }
>
  "What you are is God's gift to you, what you become is your gift to God." ― Hans Urs von Balthasar
</Text>
`;

exports[`the H4 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "Colfax-Bold",
      "fontSize": 25.2,
      "lineHeight": 31.28,
      "paddingBottom": 3.71,
      "paddingTop": 5.04,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H4 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 25.2,
      "lineHeight": 31.28,
      "paddingBottom": 3.71,
      "paddingTop": 5.04,
    }
  }
>
  Default H4 text
</Text>
`;
